--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
+SHOPIFY_API_KEY=
+SHOPIFY_API_SECRET=
+SHOP=
+SCOPES=
+HOST=
 APP_NAME="Shopify PHP App"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
-
-DB_CONNECTION=sqlite
-# The path to the database file should be absolute, make sure to update it!
-DB_DATABASE=storage/db.sqlite
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=shopify
+DB_USERNAME=root
+DB_PASSWORD=
 DB_FOREIGN_KEYS=true
-
-SHOPIFY_API_KEY=
-SHOPIFY_API_SECRET=
-SCOPES=
-HOST=
